--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "lucide-react": "^0.544.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-head": "^3.4.2",
     "react-router-dom": "^7.9.3"
   },
   "devDependencies": {
