--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   },
   "dependencies": {
     "@lexical/react": "^0.36.2",
+    "@tailwindcss/typography": "^0.5.19",
     "@tinymce/tinymce-react": "^6.3.0",
     "axios": "^1.12.2",
     "lexical": "^0.36.2",
     "lucide-react": "^0.544.0",
+    "marked": "^16.4.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-head": "^3.4.2",
