--- a/package.json
+++ b/package.json
@@ -1,40 +1,27 @@
 {
-  "name": "blog",
+  "name": "next-app",
+  "version": "0.1.0",
   "private": true,
-  "version": "0.0.0",
-  "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "tsc -b && vite build",
-    "lint": "eslint .",
-    "preview": "vite preview"
+    "dev": "next dev --turbopack -p 3001",
+    "build": "next build --turbopack",
+    "start": "next start -p 3001",
+    "lint": "eslint"
   },
   "dependencies": {
-    "@lexical/react": "^0.36.2",
-    "@tailwindcss/typography": "^0.5.19",
-    "@tinymce/tinymce-react": "^6.3.0",
-    "axios": "^1.12.2",
-    "lexical": "^0.36.2",
-    "lucide-react": "^0.544.0",
-    "marked": "^16.4.0",
-    "react": "^19.1.1",
-    "react-dom": "^19.1.1",
-    "react-head": "^3.4.2",
-    "react-router-dom": "^7.9.3"
+    "react": "19.1.0",
+    "react-dom": "19.1.0",
+    "next": "15.5.4"
   },
   "devDependencies": {
-    "@eslint/js": "^9.36.0",
-    "@tailwindcss/vite": "^4.1.13",
-    "@types/react": "^19.1.13",
-    "@types/react-dom": "^19.1.9",
-    "@vitejs/plugin-react": "^5.0.3",
-    "eslint": "^9.36.0",
-    "eslint-plugin-react-hooks": "^5.2.0",
-    "eslint-plugin-react-refresh": "^0.4.20",
-    "globals": "^16.4.0",
-    "tailwindcss": "^4.1.13",
-    "typescript": "~5.8.3",
-    "typescript-eslint": "^8.44.0",
-    "vite": "^7.1.7"
+    "typescript": "^5",
+    "@types/node": "^20",
+    "@types/react": "^19",
+    "@types/react-dom": "^19",
+    "@tailwindcss/postcss": "^4",
+    "tailwindcss": "^4",
+    "eslint": "^9",
+    "eslint-config-next": "15.5.4",
+    "@eslint/eslintrc": "^3"
   }
 }
