--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
-    "@tinymce/tinymce-react": "^6.3.0",
+    "@uiw/react-md-editor": "^4.0.8",
     "axios": "^1.12.2",
     "lucide-react": "^0.545.0",
     "marked": "^16.4.0",
